--- a/assets/scss/components/_cards.scss
+++ b/assets/scss/components/_cards.scss
@@ -28,11 +28,11 @@
 		width: 90%;
 		bottom: 20px;
 		transform: translateX(-50%);
-		border: 24px solid #141414;
+		border: 20px solid #141414;
 		border-left: 15px solid transparent;
 		border-right: 15px solid transparent;
 		p {
-			font-size: 18px;
+			font-size: 16px;
 			line-height: 21.78px;
 			text-transform: uppercase;
 			font-weight: 600;
